[package]
name = "mirrorb"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glutin = "0.26.0"
takeable-option = "0.5"
rand = "0.8.3"
image = "0.23.14"
cgmath = "0.18.0"
gilrs = "0.9.0"

[build-dependencies]
gl_generator = "0.14"